--- a/public/.htaccess
+++ b/public/.htaccess
@@ -3,4 +3,5 @@ RewriteBase /
 
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ /index.php [QSA,L]
+
+RewriteRule ^(.*)$ index.php [QSA,L]
